--- a/src/assets/styles/Navigations.css
+++ b/src/assets/styles/Navigations.css
@@ -1,61 +1,27 @@
-.mobile-nav {
+nav {
+  font-family: sans-serif;
   display: flex;
-  flex-direction: column;
-  background-color: black;
-  z-index: 1000;
-  position: relative;
-  padding: 2rem;
-  transition: all 200ms ease-in-out;
-  margin-top: -345px;
-  margin-bottom: 0;
-}
-.mobile-nav ul {
-  flex-direction: column;
   align-items: center;
-}
-.mobile-nav .secondary-nav {
-  margin-top: 1rem;
-  padding-top: 1rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-}
-.mobile-nav .secondary-nav ul {
-  flex-direction: row;
-}
-.mobile-nav .social-nav {
-  margin-top: 1rem;
-}
-.mobile-nav .social-nav ul {
-  flex-direction: row;
-}
-.mobile-nav .social-nav ul li a .icon {
-  width: 1rem;
-  height: 1rem;
-}
-
-.mobile-nav-open {
-  margin-top: 0;
-  margin-bottom: -345px;
-}
-
-.scroll-up {
-  display: flex;
   justify-content: center;
+}
+nav ul {
+  display: flex;
+}
+nav ul li {
+  display: flex;
   align-items: center;
-  position: fixed;
-  width: 2.2rem;
-  height: 2.2rem;
-  bottom: 8rem;
-  right: 2rem;
-  border-radius: 50%;
-  background-color: #50727e;
-  transition: all 350ms ease-in-out;
-  cursor: pointer;
-  z-index: 1002;
-  box-shadow: 0 0 5px white;
 }
-.scroll-up .icon {
+nav ul li a,
+nav ul li span {
+  display: flex;
+  text-transform: uppercase;
+  padding: 0.25rem 0.75rem;
+  transition: all 250ms ease-in-out;
   color: white;
+  cursor: pointer;
 }
-.scroll-up:hover {
-  background-color: darkred;
+nav ul li a:hover,
+nav ul li span:hover {
+  background-color: white;
+  color: black;
 }/*# sourceMappingURL=Navigations.css.map */
