--- a/src/assets/styles/Navigations.scss
+++ b/src/assets/styles/Navigations.scss
@@ -28,3 +28,44 @@ nav {
         }
     }
 }
+
+.mobile-nav {
+    display: flex;
+
+    .mobile-nav-body {
+        padding: 2rem;
+        top: 100px;
+        left: 0;
+        width: 100%;
+        background-color: rgb(75, 75, 75);
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+
+        .main-menu-list {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.25rem;
+            min-width: 40%;
+            border-bottom: 1px solid #ffffff80;
+            padding-bottom: 1rem;
+        }
+    }
+}
+
+$swap-menu-at: 950px;
+
+.main-nav {
+    @media (max-width: $swap-menu-at) {
+        display: none;
+    }
+}
+
+.mobile-nav {
+    @media (min-width: $swap-menu-at) {
+        display: none;
+    }
+}
