--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -14,6 +14,40 @@
     }
 }
 
+.not-found-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    background-color: #f5f5f5;
+
+    .page-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #fff;
+        padding: 3rem;
+        border-radius: 12px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        text-align: center;
+
+        h2 {
+            font-size: 2.5rem;
+            color: #333;
+            margin-bottom: 1rem;
+            //text-transform: uppercase;
+        }
+
+        p {
+            font-size: 1.5rem;
+            color: #777;
+            margin: 0;
+        }
+    }
+}
+
+
 .home-page {
     padding: 0 !important;
 
@@ -485,39 +519,6 @@
             @media(max-width: 500px) {
                 padding: 1rem 0.5rem;
             }
-        }
-    }
-}
-
-.awards-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 500px;
-    background-color: #f5f5f5;
-
-    .page-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: #fff;
-        padding: 3rem;
-        border-radius: 12px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        max-width: 600px;
-        text-align: center;
-
-        h2 {
-            font-size: 2.5rem;
-            color: #333;
-            margin-bottom: 1rem;
-            text-transform: uppercase;
-        }
-
-        p {
-            font-size: 1.5rem;
-            color: #777;
-            margin: 0;
         }
     }
 }
