--- a/src/assets/styles/PhotographyPackeges.scss
+++ b/src/assets/styles/PhotographyPackeges.scss
@@ -60,6 +60,8 @@
         .description {
             margin-top: auto;
             margin-bottom: 2rem;
+            font-size: 1.25rem;
+            line-height: 1.5rem;
         }
 
         button {
