--- a/src/assets/styles/Pages.css
+++ b/src/assets/styles/Pages.css
@@ -471,8 +471,8 @@
   display: flex;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin: 0 auto;
-  max-width: 1440px;
-  height: 700px;
+  height: 500px;
+  max-width: 1000px;
   overflow: hidden;
 }
 .faq-page .content .media-container {
@@ -480,7 +480,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  width: 100%;
+  width: 50%;
 }
 @media (max-width: 1000px) {
   .faq-page .content .media-container {
@@ -489,7 +489,7 @@
 }
 .faq-page .content .question-container {
   padding: 2rem;
-  width: 100%;
+  width: 50%;
   height: 100%;
   overflow-y: scroll;
   background-color: white;
@@ -500,6 +500,7 @@
 }
 .faq-page .content .question-container h2 {
   font-weight: bold;
+  background-color: red;
 }
 .faq-page .content .question-container section {
   padding-bottom: 0.5rem;
@@ -711,30 +712,6 @@
   background-position: top left;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-.portfolio-page .share-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  background-color: #0073e6;
-  color: white;
-  border-radius: 50%;
-  width: 3rem;
-  height: 3rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-  z-index: 1000;
-}
-.portfolio-page .share-button:hover {
-  background-color: #005bb5;
-  transform: scale(1.1);
-}
-.portfolio-page .share-button .icon {
-  font-size: 1.5rem;
 }
 .portfolio-page .content {
   max-width: 1440px;
