--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -530,8 +530,9 @@
         display: flex;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         margin: 0 auto;
-        max-width: 1440px;
-        height: 700px;
+        //max-width: 1440px;
+        height: 500px;
+        max-width: 1000px;
         overflow: hidden;
 
         .media-container {
@@ -539,7 +540,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            width: 100%;
+            width: 50%;
 
             @media (max-width: 1000px) {
                 display: none;
@@ -548,7 +549,7 @@
 
         .question-container {
             padding: 2rem;
-            width: 100%;
+            width: 50%;
             height: 100%;
             overflow-y: scroll;
             background-color: white;
@@ -560,6 +561,7 @@
 
             h2 {
                 font-weight: bold;
+                background-color: red;
             }
 
             section {
@@ -815,34 +817,6 @@
     background-position: top left;
     background-repeat: no-repeat;
     background-attachment: fixed;
-
-    .share-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        bottom: 1rem;
-        right: 1rem;
-        background-color: #0073e6;
-        color: white;
-        border-radius: 50%;
-        width: 3rem;
-        height: 3rem;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-        z-index: 1000;
-    }
-
-    .share-button:hover {
-        background-color: #005bb5;
-        transform: scale(1.1);
-    }
-
-    .share-button .icon {
-        font-size: 1.5rem;
-    }
-
 
     .content {
         max-width: 1440px;
