Add more bottom  margin to testimonials grid

--- a/src/assets/styles/Pages.css
+++ b/src/assets/styles/Pages.css
@@ -616,7 +616,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 2rem;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
 }
 .testimonials-page .content .grid .card {
   background-color: #002f4b;
