--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -701,7 +701,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 2rem;
-            margin: 0 auto;
+            margin: 0 auto 2rem;
 
             .card {
                 background-color: #002f4b;
