--- a/src/assets/styles/Banner.css
+++ b/src/assets/styles/Banner.css
@@ -15,4 +15,7 @@
     font-size: 2rem;
     padding: 1rem;
   }
+}
+.banner#why-me-banner {
+  font-size: 2rem;
 }/*# sourceMappingURL=Banner.css.map */
