--- a/src/assets/styles/HighlightMetrics.scss
+++ b/src/assets/styles/HighlightMetrics.scss
@@ -34,3 +34,21 @@
         }
     }
 }
+
+@keyframes spinY {
+    from {
+        transform: rotateY(0deg);
+    }
+
+    to {
+        transform: rotateY(360deg);
+    }
+}
+
+.icon {
+    transition: transform 0.3s ease;
+}
+
+.rotate-y {
+    animation: spinY 1s linear infinite;
+}
