--- a/src/assets/styles/Buttons.scss
+++ b/src/assets/styles/Buttons.scss
@@ -37,15 +37,6 @@
         }
 
     }
-
-    // &.book-btn {
-    //     background-color: red;
-    //     transform: scale(1.5);
-    // 
-    //     &:hover {
-    //         background-color: darkred;
-    //     }
-    // }
 }
 
 .action-btn {
@@ -65,6 +56,7 @@
     &.book-btn {
         display: flex;
         justify-self: center;
+        align-items: center;
         gap: 0.5rem;
         transform: scale(1.25);
         margin-top: 3rem;
