--- a/src/assets/styles/Pages.css
+++ b/src/assets/styles/Pages.css
@@ -95,7 +95,6 @@
   margin-top: 2rem;
 }
 .home-page .category-container {
-  background-color: #f4f4f4;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   margin: 12rem 0;
 }
@@ -110,6 +109,7 @@
   margin: 0 auto;
 }
 .home-page .category-container .category-box .category-photo-box {
+  background-color: transparent;
   position: relative;
   left: 5%;
   top: -8rem;
@@ -117,8 +117,15 @@
   height: 80%;
   z-index: 1;
   overflow: hidden;
-  border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.home-page .category-container .category-box .category-photo-box .tagline {
+  padding: 1rem;
+  font-size: 1.75rem;
+  line-height: 2rem;
+  text-align: center;
+  color: #BFA16B;
 }
 .home-page .category-container .category-box .category-photo-box div {
   display: flex;
@@ -126,13 +133,14 @@
   height: 100%;
   width: 100%;
   background-size: cover;
-  background-position: center;
+  background-position: center top;
+  border-radius: 0 24px 0 0;
 }
 .home-page .category-container .category-box .category-photo-box div a {
   align-self: flex-start;
   padding: 0 !important;
   background-color: rgba(200, 200, 200, 0.4);
-  border-radius: 8px;
+  border-radius: 50%;
 }
 .home-page .category-container .category-box .category-photo-box div a:hover .icon {
   transform: scale(1.2);
@@ -274,11 +282,7 @@
 }
 
 .about-page {
-  background: url("../images/about/bg_opac_10.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
+  background: url("../images/about/bg_opac_10.jpg") no-repeat center/cover fixed;
 }
 .about-page .content {
   max-width: 850px;
@@ -290,9 +294,7 @@
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
 }
 .about-page .content .wrapper {
-  background: url("../images/about/bg_opac_10.jpg");
-  background-repeat: no-repeat;
-  background-position: bottom;
+  background: url("../images/about/bg_opac_10.jpg") no-repeat bottom;
   background-position-y: 165px;
   background-size: cover;
   width: 100%;
@@ -312,17 +314,20 @@
 }
 .about-page .content .about-header img {
   width: 250px;
-  /* Reduced width for a more proportional look */
   height: auto;
   border-radius: 50%;
   margin-bottom: 1.5rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  /* Soft shadow for subtle focus */
 }
 .about-page .content .about-header h1 {
   padding-left: 0;
   color: #505a6b;
   font-size: 2rem;
+}
+.about-page .content .about-header .subheadline {
+  font-size: 1rem;
+  color: #666;
+  margin-top: 0.5rem;
 }
 @media (max-width: 500px) {
   .about-page .content .about-header {
@@ -338,22 +343,8 @@
 .about-page .content .about-details p {
   margin-bottom: 1.5rem;
 }
-.about-page .content .about-details .cta-button {
-  display: inline-block;
-  margin-top: 2rem;
-  padding: 0.75rem 1.5rem;
-  background-color: #50627E;
-  /* Soft muted tone for a modern look */
-  color: white;
-  border-radius: 5px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: bold;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-.about-page .content .about-details .cta-button:hover {
-  background-color: #3b4b61;
-  transform: translateY(-3px);
+.about-page .content .about-details .book-btn {
+  transform: scale(0.8);
 }
 
 .contact-page {
@@ -630,11 +621,10 @@
 .testimonials-page .content .grid .card {
   background-color: #002f4b;
   color: white;
-  border-radius: 0;
   box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
   overflow: hidden;
   text-align: center;
-  max-width: 600px;
+  max-width: 300px;
   transition: all 0.3s ease, box-shadow 0.3s ease;
   display: flex;
   flex-direction: column;
@@ -651,7 +641,6 @@
 }
 .testimonials-page .content .grid .card:hover {
   transform: translateY(-10px);
-  background-color: #004d73;
 }
 .testimonials-page .content .grid .card h3 {
   font-size: 1.2rem;
