--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -110,7 +110,6 @@
     }
 
     .category-container {
-        background-color: #f4f4f4;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         margin: 12rem 0;
 
@@ -125,6 +124,7 @@
             margin: 0 auto;
 
             .category-photo-box {
+                background-color: transparent;
                 position: relative;
                 left: 5%;
                 top: -8rem;
@@ -132,8 +132,16 @@
                 height: 80%;
                 z-index: 1;
                 overflow: hidden;
-                border-radius: 10px;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+                border-radius: 10px;
+
+                .tagline {
+                    padding: 1rem;
+                    font-size: 1.75rem;
+                    line-height: 2rem;
+                    text-align: center;
+                    color: #BFA16B;
+                }
 
                 div {
                     display: flex;
@@ -141,13 +149,14 @@
                     height: 100%;
                     width: 100%;
                     background-size: cover;
-                    background-position: center;
+                    background-position: center top;
+                    border-radius: 0 24px 0 0;
 
                     a {
                         align-self: flex-start;
                         padding: 0 !important;
                         background-color: rgba(200, 200, 200, 0.4);
-                        border-radius: 8px;
+                        border-radius: 50%;
 
                         &:hover {
                             .icon {
@@ -308,13 +317,7 @@
 }
 
 .about-page {
-    background: url('../images/about/bg_opac_10.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-
-    //padding: 4rem 2rem;
+    background: url('../images/about/bg_opac_10.jpg') no-repeat center/cover fixed;
 
     .content {
         max-width: 850px;
@@ -325,12 +328,8 @@
         background-color: white;
         box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
 
-
-
         .wrapper {
-            background: url('../images/about/bg_opac_10.jpg');
-            background-repeat: no-repeat;
-            background-position: bottom;
+            background: url('../images/about/bg_opac_10.jpg') no-repeat bottom;
             background-position-y: 165px;
             background-size: cover;
             width: 100%;
@@ -350,18 +349,22 @@
 
             img {
                 width: 250px;
-                /* Reduced width for a more proportional look */
                 height: auto;
                 border-radius: 50%;
                 margin-bottom: 1.5rem;
                 box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-                /* Soft shadow for subtle focus */
             }
 
             h1 {
                 padding-left: 0;
                 color: #505a6b;
                 font-size: 2rem;
+            }
+
+            .subheadline {
+                font-size: 1rem;
+                color: #666;
+                margin-top: 0.5rem;
             }
 
             @media(max-width: 500px) {
@@ -379,23 +382,8 @@
                 margin-bottom: 1.5rem;
             }
 
-            .cta-button {
-                display: inline-block;
-                margin-top: 2rem;
-                padding: 0.75rem 1.5rem;
-                background-color: #50627E;
-                /* Soft muted tone for a modern look */
-                color: white;
-                border-radius: 5px;
-                text-transform: uppercase;
-                text-decoration: none;
-                font-weight: bold;
-                transition: background-color 0.3s ease, transform 0.3s ease;
-
-                &:hover {
-                    background-color: #3b4b61;
-                    transform: translateY(-3px);
-                }
+            .book-btn {
+                transform: scale(0.8);
             }
         }
     }
@@ -718,11 +706,10 @@
             .card {
                 background-color: #002f4b;
                 color: white;
-                border-radius: 0;
                 box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
                 overflow: hidden;
                 text-align: center;
-                max-width: 600px;
+                max-width: 300px;
                 transition: all 0.3s ease, box-shadow 0.3s ease;
                 display: flex;
                 flex-direction: column;
@@ -742,7 +729,7 @@
 
                 &:hover {
                     transform: translateY(-10px);
-                    background-color: #004d73;
+                    //background-color: #004d73;
                 }
 
                 h3 {
