--- a/src/assets/styles/Navigations.scss
+++ b/src/assets/styles/Navigations.scss
@@ -37,6 +37,7 @@ nav {
                         content: '';
                         position: absolute;
                         border: 3px solid #007bff;
+                        border: 3px solid #BFA16B;
                     }
 
                     &::before {
