--- a/src/assets/styles/Buttons.css
+++ b/src/assets/styles/Buttons.css
@@ -11,6 +11,7 @@
   transition: all 350ms ease-in-out;
   cursor: pointer;
   box-shadow: 0 0 5px white;
+  border: none;
   z-index: 1000;
 }
 .screen-side-btn .icon {
@@ -50,11 +51,11 @@
   display: flex;
   justify-self: center;
   align-items: center;
-  gap: 0.5rem;
-  transform: scale(1.25);
-  margin-top: 3rem;
-  background-color: rgb(225, 7, 7);
+  gap: 1rem;
+  margin: 3rem 0;
+  background-color: #BFA16B;
   font-weight: bold;
+  font-size: x-large;
 }
 .action-btn.book-btn:hover {
   background-color: rgb(180, 7, 7);
