--- a/src/assets/styles/PhotographyPackeges.css
+++ b/src/assets/styles/PhotographyPackeges.css
@@ -4,8 +4,9 @@
   background-attachment: fixed;
   background-color: #f7f7f7;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  justify-content: center;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .photography-packeges .package-container {
   max-width: 1440px;
