--- a/src/assets/styles/PhotographyPackeges.scss
+++ b/src/assets/styles/PhotographyPackeges.scss
@@ -5,8 +5,10 @@
 
     background-color: #f7f7f7;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    justify-content: center;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 
     .package-container {
         max-width: 1440px;
