--- a/src/assets/styles/Banner.scss
+++ b/src/assets/styles/Banner.scss
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 
 .banner {
-    background-color: #f7f3f0; // Soft neutral tone
-    color: #333; // Readable and modern
+    //background-color: #f7f3f0;
+    color: #333;
     font-size: 3rem;
     text-align: center;
     padding: 1.5rem 1rem;
     margin: 2rem 0 5rem;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    //box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
     letter-spacing: 0.5px;
 
     @media (max-width: 768px) {
