--- a/src/assets/styles/PhotographyPackeges.css
+++ b/src/assets/styles/PhotographyPackeges.css
@@ -2,29 +2,16 @@
   background: url("../images/home/paralax3.jpg") no-repeat top right;
   background-size: cover;
   background-attachment: fixed;
-  background-color: #f7f7f7;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 .photography-packeges .package-container {
-  max-width: 1440px;
-  margin: 0 auto;
-  display: grid;
-  gap: 1.5rem;
-  padding: 1.5rem;
-  grid-template-columns: repeat(3, 1fr);
-}
-@media (max-width: 1300px) {
-  .photography-packeges .package-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 700px) {
-  .photography-packeges .package-container {
-    grid-template-columns: 1fr;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
 }
 .photography-packeges .package-card {
   display: flex;
