--- a/src/assets/styles/PhotographyPackeges.scss
+++ b/src/assets/styles/PhotographyPackeges.scss
@@ -3,32 +3,19 @@
     background-size: cover;
     background-attachment: fixed;
 
-    background-color: #f7f7f7;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    // background-color: #f7f7f7;
+    // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: center;
 
 
     .package-container {
-        max-width: 1440px;
-        margin: 0 auto;
-        display: grid;
-        gap: 1.5rem;
-        padding: 1.5rem;
-
-        // Default layout: 2x3 (2 columns, 3 rows)
-        grid-template-columns: repeat(3, 1fr);
-
-        // Media query for larger screens: 3x2 (3 columns, 2 rows)
-        @media (max-width: 1300px) {
-            grid-template-columns: repeat(2, 1fr);
-        }
-
-        // Media query for smaller screens: 1x6 (1 column, 6 rows)
-        @media (max-width: 700px) {
-            grid-template-columns: 1fr;
-        }
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 2rem;
+        padding: 2rem;
     }
 
     .package-card {
